public/stylesheets/main.css
/* ... */
#main-section img {
  height: 200px
  width: 200px;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: -webkit-transform 400ms;
  -moz-transition: -moz-transform 400ms;
  transition: transform 400ms;
}
.service-i{
  display: inline!important;
}
#main-section i:hover{
  -webkit-transform: scale3d(1.2, 1.2, 1);
  -moz-transform: scale3d(1.2, 1.2, 1);
  transform: scale3d(1.2, 1.2, 1);
}
#main-section i{
  height: 200px
  width: 200px;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: -webkit-transform 400ms;
  -moz-transition: -moz-transform 400ms;
  transition: transform 400ms;
}
#footer {
  background: #fff;
  padding: 25px 0;
  color: #555;
}
#footer .copyright {
  font-size: 17px;
  margin-bottom: 0;
  margin-top: 10px;
}
#footer .social {
  text-align: right;
  margin-bottom: 0;
}
#footer .social li {
  display: inline-block;
  margin-right: 15px;
}
#footer .social li a {
  font-size: 22px;
  color: #ff3744;
}
#footer img{
  padding-left: 2%;
  padding-right: 2%
}
#call-to-action {
  background: #ff3744;
  background-size: cover;
  background-attachment: fixed;
  padding: 80px 0;
  text-align: center;
  position: relative;
  color: #fff;
}
#call-to-action .block {
  position: relative;
  z-index: 99;
  color: #fff;
}
#call-to-action .block h2 {
  margin-bottom: 15px;
  color: #fff;
}
#call-to-action .block p {
  font-size: 15px;
  font-weight: 300;
  font-family: 'Roboto', sans-serif;
  margin-top: 20px;
}
#call-to-action .block .btn-contact {
  background: #fff;
  border: none;
  color: #ff3744;
  padding: 16px 35px;
  margin-top: 20px;
  font-size: 16px;
  letter-spacing: 2px;
  text-transform: uppercase;
  border-radius: 0;
}
#call-to-action .block .btn-contact i {
  margin-right: 10px;
}
#market-main-section{
  position: relative;
  margin-top: 5%;
  margin-bottom: 5%
}
#places-main-section{
  position: relative;
  margin-top: 5%;
  margin-bottom: 5%
}
#promotions-main-section{
  position: relative;
  margin-top: 5%;
  margin-bottom: 5%
}
#bnb-main-section{
  position: relative;
  margin-top: 5%;
  margin-bottom: 5%
}
ap-canvas{
  height: 100%
}
.main-list{
  padding: 5% 5% 0 5%
}
.main-list h4{
  font-size: 20px;
  font-weight: 600;
  text-transform: uppercase;
  line-height: 15px;
  color: #ff3744;
  font-family: 'Roboto-Condensed', sans-serif;
  margin-top: 10px;
  margin-bottom: 10px;
}
#footer hr{
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
#contact-form{
  position: relative;
  margin-top: 5%;
  margin-bottom: 5%
}
.cd-title {
  position: relative;
  height: 160px;
  line-height: 230px;
  text-align: center;
}
.cd-title h1 {
  font-size: 2.4rem;
  font-weight: 700;
}
@media only screen and (min-width: 768px) {
  .cd-title {
    line-height: 250px;
  }
}
@media only screen and (min-width: 1170px) {
  .cd-title {
    height: 200px;
    line-height: 300px;
  }
  .cd-title h1 {
    font-size: 3rem;
  }
}

.cd-intro {
  width: 100%;
  text-align: center;
}

.cd-intro {
  margin: 4em auto;
}
@media only screen and (min-width: 768px) {
  .cd-intro {
    margin: 5em auto;
  }
}
@media only screen and (min-width: 1170px) {
  .cd-intro {
    margin: 6em auto;
  }
}

.cd-headline {
  font-size: 3rem;
  line-height: 1.2;
}
@media only screen and (min-width: 768px) {
  .cd-headline {
    font-size: 4.4rem;
    font-weight: 300;
  }
}
@media only screen and (min-width: 1170px) {
  .cd-headline {
    font-size: 6rem;
  }
}

.cd-words-wrapper {
  display: inline-block;
  position: relative;
  text-align: left;
}
.cd-words-wrapper b {
  display: inline-block;
  position: absolute;
  white-space: nowrap;
  left: 0;
  top: 0;
}
.cd-words-wrapper b.is-visible {
  position: relative;
}
.no-js .cd-words-wrapper b {
  opacity: 0;
}
.no-js .cd-words-wrapper b.is-visible {
  opacity: 1;
}

.cd-headline.rotate-1 .cd-words-wrapper {
  -webkit-perspective: 300px;
  -moz-perspective: 300px;
  perspective: 300px;
}
.cd-headline.rotate-1 b {
  opacity: 0;
  -webkit-transform-origin: 50% 100%;
  -moz-transform-origin: 50% 100%;
  -ms-transform-origin: 50% 100%;
  -o-transform-origin: 50% 100%;
  transform-origin: 50% 100%;
  -webkit-transform: rotateX(180deg);
  -moz-transform: rotateX(180deg);
  -ms-transform: rotateX(180deg);
  -o-transform: rotateX(180deg);
  transform: rotateX(180deg);
}
.cd-headline.rotate-1 b.is-visible {
  opacity: 1;
  -webkit-transform: rotateX(0deg);
  -moz-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  -o-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-animation: cd-rotate-1-in 1.2s;
  -moz-animation: cd-rotate-1-in 1.2s;
  animation: cd-rotate-1-in 1.2s;
}
.cd-headline.rotate-1 b.is-hidden {
  -webkit-transform: rotateX(180deg);
  -moz-transform: rotateX(180deg);
  -ms-transform: rotateX(180deg);
  -o-transform: rotateX(180deg);
  transform: rotateX(180deg);
  -webkit-animation: cd-rotate-1-out 1.2s;
  -moz-animation: cd-rotate-1-out 1.2s;
  animation: cd-rotate-1-out 1.2s;
}

@-webkit-keyframes cd-rotate-1-in {
  0% {
    -webkit-transform: rotateX(180deg);
    opacity: 0;
  }
  35% {
    -webkit-transform: rotateX(120deg);
    opacity: 0;
  }
  65% {
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateX(360deg);
    opacity: 1;
  }
}
@-moz-keyframes cd-rotate-1-in {
  0% {
    -moz-transform: rotateX(180deg);
    opacity: 0;
  }
  35% {
    -moz-transform: rotateX(120deg);
    opacity: 0;
  }
  65% {
    opacity: 0;
  }
  100% {
    -moz-transform: rotateX(360deg);
    opacity: 1;
  }
}
/* ... */

